AnuPuccin with Style-Settings

--- a/lib/styles/supported-plugins.css
+++ b/lib/styles/supported-plugins.css
@@ -1,1 +1,1 @@
-.item-icon.svelte-1azmbrd{padding-top:0}.st-timer.svelte-1azmbrd{display:inline-flex;align-items:center}
+.item-icon.svelte-1azmbrd{padding-top:0}.st-timer.svelte-1azmbrd{display:inline-flex;align-items:center}body.theme-light.css-settings-manager{--anp-code-bg-color:#A7C4E1}body.theme-dark.css-settings-manager{--anp-code-bg-color:#602424}
