--- a/lib/styles/supported-plugins.css
+++ b/lib/styles/supported-plugins.css
@@ -1,1 +1,1 @@
-.item-icon.svelte-1azmbrd{padding-top:0}.st-timer.svelte-1azmbrd{display:inline-flex;align-items:center}body.css-settings-manager{--bg-hue-light:130}
+.item-icon.svelte-1azmbrd{padding-top:0}.st-timer.svelte-1azmbrd{display:inline-flex;align-items:center}
